--- a/outils/index.html
+++ b/outils/index.html
@@ -177,8 +177,8 @@ footer {
     </a>
 
     <a class="card" href="sheet_generator_schema_partie_tout.html" data-color="diagrammes">
-      <div class="card-title">🧩 Schéma partie-tout</div>
-      <p class="card-desc">Générateur de schémas et de problèmes mathématiques.</p>
+      <div class="card-title">🧩 Schémas partie-tout</div>
+      <p class="card-desc">Un parcours vers l'algèbre avec SPLAT! : stevewyborney.com</p>
     </a>
 
     <a class="card" href="fabrication_materiel/" data-color="fabrication">
