--- a/outils/index.html
+++ b/outils/index.html
@@ -178,7 +178,7 @@ footer {
 
     <a class="card" href="sheet_generator_schema_partie_tout.html" data-color="diagrammes">
       <div class="card-title">🧩 Schémas partie-tout</div>
-      <p class="card-desc">Un parcours vers l'algèbre avec SPLAT! : stevewyborney.com</p>
+      <p class="card-desc">Un parcours vers l'algèbre avec SPLAT! stevewyborney.com est à l'origine de l'idée</p>
     </a>
 
     <a class="card" href="fabrication_materiel/" data-color="fabrication">
