--- a/outils/index.html
+++ b/outils/index.html
@@ -200,7 +200,7 @@ footer {
       <p class="card-desc">Espaces de travail pour projeter les manipulations des élèves.</p>
     </a>
 
-    <a class="card working" href="suites_de_nombres.html/" data-color="patterns">
+    <a class="card working" href="patterns.html/" data-color="patterns">
       <div class="card-title">
         <span>🔢 Suites de nombres</span>
         <span class="badge-work">🚧 En cours</span>
