--- a/outils/index.html
+++ b/outils/index.html
@@ -172,7 +172,7 @@ footer {
 
     <a class="card" href="bouliers/" data-color="bouliers">
       <div class="card-title"><span>🧮 Bouliers/abaques</span></div>
-      <p class="card-desc">Manipulations virtuelles et activités sur le boulier.</p>
+      <p class="card-desc">Manipulations virtuelles et activités.</p>
     </a>
 
     <a class="card" href="CM_Livret_A5.html" data-color="cahier">
