--- a/outils/index.html
+++ b/outils/index.html
@@ -171,7 +171,7 @@ footer {
   <section class="grid">
 
     <a class="card" href="bouliers/" data-color="bouliers">
-      <div class="card-title"><span>🧮 Bouliers/abaques</span></div>
+      <div class="card-title"><span>🧮 Bouliers et abaques</span></div>
       <p class="card-desc">Manipulations virtuelles et activités.</p>
     </a>
 
