--- a/outils/bouliers/index.html
+++ b/outils/bouliers/index.html
@@ -57,9 +57,9 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
-            padding: 4rem 1rem;
+            padding: 5.5rem 1rem 2.5rem;
             max-width: 1200px;
             margin: 0 auto;
             width: 100%;
@@ -67,9 +67,9 @@
         }
 
         .page-title {
-            font-size: 2.5rem;
+            font-size: 2.2rem;
             font-weight: 800;
-            margin-bottom: 3rem;
+            margin-bottom: 2.25rem;
             text-align: center;
             color: #334155;
             letter-spacing: -1px;
@@ -78,10 +78,11 @@
         }
 
         /* La Grille de Choix */
-        .choice-grid {
+                .choice-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Un peu plus compact */
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            column-gap: 2rem;
+            row-gap: 6.2rem;
             width: 100%;
             max-width: 1000px;
         }
@@ -92,7 +93,7 @@
             position: relative;
             background: white;
             border-radius: 24px;
-            padding: 1.5rem; /* Padding réduit un peu pour gagner de la place */
+            padding: 1.25rem; /* Padding réduit un peu pour gagner de la place */
             text-align: center;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             border: 2px solid transparent;
@@ -102,7 +103,7 @@
             align-items: center;
             justify-content: center;
             height: 100%;
-            min-height: 220px; /* Hauteur minimale légèrement réduite */
+            min-height: 200px; /* Hauteur minimale légèrement réduite */
             overflow: hidden;
         }
 
@@ -117,19 +118,20 @@
         }
 
         .choice-card:hover {
+            z-index: 5;
             transform: translateY(-6px) scale(1.01);
             box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
         }
 
         /* ICONES ET BILLES */
         .icon-wrapper {
-            height: 3.5rem; /* Un peu plus compact */
-            margin-bottom: 1.2rem;
+            height: 3.2rem; /* Un peu plus compact */
+            margin-bottom: 1rem;
             transition: transform 0.3s;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 3.5rem; 
+            font-size: 3.2rem; 
         }
         
         /* Design des billes CSS */
@@ -139,8 +141,8 @@
             gap: 4px; /* Espacement réduit entre les billes */
         }
         .bead {
-            width: 28px; /* Billes légèrement plus petites */
-            height: 28px;
+            width: 26px; /* Billes légèrement plus petites */
+            height: 26px;
             border-radius: 50%;
             box-shadow: inset -3px -3px 8px rgba(0,0,0,0.2), 2px 2px 5px rgba(0,0,0,0.2);
             position: relative;
@@ -166,7 +168,7 @@
         }
 
         .card-title {
-            font-size: 1.25rem; /* Taille réduite (avant 1.5rem) */
+            font-size: 1.18rem; /* Taille réduite (avant 1.5rem) */
             font-weight: 700;
             margin: 0;
             color: #1e293b;
@@ -205,16 +207,35 @@
         .theme-soroban .card-title { color: #b45309; }
         .theme-soroban .card-desc { color: #fbbf24; }
 
+        .theme-gerbert { border-color: #e2e8f0; }
+        .theme-gerbert:hover {
+            border-color: #8b5cf6;
+            background: linear-gradient(to bottom right, #ffffff, #f5f3ff);
+        }
+        .theme-gerbert .card-title { color: #6d28d9; }
+        .theme-gerbert .card-desc { color: #a78bfa; }
+
         footer {
             text-align: center;
             padding: 2rem;
             color: #cbd5e1; /* Très discret */
             font-size: 0.8rem;
         }
+        /* --- Centrage de la 4e carte (Abaque de Gerbert) sur grands écrans (3 colonnes) --- */
+        @media (min-width: 900px) {
+            .choice-grid {
+                grid-template-columns: repeat(3, minmax(280px, 1fr));
+            }
+            .choice-grid .theme-gerbert {
+                grid-column: 2;
+            }
+        }
+
+
 
         @media (max-width: 600px) {
             .page-title { font-size: 2rem; margin-top: 3rem; }
-            .choice-card { min-height: 160px; padding: 1.25rem; }
+            .choice-card { min-height: 150px; padding: 1.25rem; }
             .icon-wrapper { font-size: 3rem; height: 3rem; margin-bottom: 0.8rem; }
         }
     </style>
@@ -268,7 +289,16 @@
                 <span class="card-desc">Cycle 3 · Cycle 4</span>
             </a>
 
-        </div>
+        
+
+            <!-- ABAQUE DE GERBERT -->
+            <a href="abaque_de_gerbert/index.html" class="choice-card theme-gerbert">
+                <div class="icon-wrapper">🏛️</div>
+                <h2 class="card-title">Abaque de Gerbert</h2>
+                <span class="card-desc">Cycle 3 · Cycle 4</span>
+            </a>
+
+</div>
 
     </div>
 
