--- a/outils/bouliers/abaque_de_gerbert/index.html
+++ b/outils/bouliers/abaque_de_gerbert/index.html
@@ -242,7 +242,7 @@
         <div class="card-head">
           <h3>Outil libre</h3>
           </div>
-        <p>Manipuler les jetons, explorer la numération et les échanges sur la BAC.</p>
+        <p>Manipuler les jetons, explorer la numération et les échanges sur l'abaque.</p>
       </a>
     </section>
 
